<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_record"
        android:icon="@drawable/ic_record"
        app:showAsAction="always"
        android:title="@string/bookcase_toolbar_record"/>
    <item
        android:id="@+id/menu_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_toolbar_search"
        android:title="@string/bookcase_toolbar_search"/>
    <item android:id="@+id/menu_more"
        android:icon="@drawable/ic_toolbar_more"
        android:title="更多"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_clear"
                app:showAsAction="never"
                android:icon="@drawable/ic_clear"
                android:title="@string/bookcase_toolbar_clear"/>
            <item
                android:id="@+id/menu_rank"
                app:showAsAction="never"
                android:icon="@drawable/ic_rank"
                android:title="@string/bookcase_toolbar_rank"/>
            <item
                android:id="@+id/menu_giving"
                app:showAsAction="never"
                android:icon="@drawable/ic_giving"
                android:title="@string/bookcase_toolbar_giving"/>
            <item
                android:id="@+id/menu_collection"
                app:showAsAction="never"
                android:icon="@drawable/ic_collection"
                android:title="@string/bookcase_toolbar_collection"/>
            <item
                android:id="@+id/menu_exchange"
                app:showAsAction="never"
                android:icon="@drawable/ic_exchange"
                android:title="@string/bookcase_toolbar_exchange"/>
            <item
                android:id="@+id/menu_import"
                app:showAsAction="never"
                android:icon="@drawable/ic_import"
                android:title="@string/bookcase_toolbar_import"/>
        </menu>
    </item>
</menu>