<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.bookstore.booklist.BookListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--
            banner_loop_time		   轮播间隔时间，默认3000
            banner_auto_loop	       是否自动轮播，默认true
            banner_infinite_loop	   是否支持无限循环（即首尾直接过渡），默认true
            banner_orientation	   轮播方向：horizontal（默认） or vertical
            banner_radius		       banner圆角半径
            banner_indicator_normal_width		    指示器默认的宽度，默认5dp （对RoundLinesIndicator无效）
            banner_indicator_selected_width		指示器选中的宽度，默认7dp （对RectangleIndicator无效）
            banner_indicator_normal_color	color	指示器默认颜色，默认0x88ffffff
            banner_indicator_selected_color		指示器选中颜色，默认0x88000000
            banner_indicator_space		指示器之间的间距，默认5dp （对RoundLinesIndicator无效）
            banner_indicator_gravity		指示器位置，默认center
            banner_indicator_margin		指示器的margin,默认5dp，不能和下面的同时使用
            banner_indicator_marginLeft		指示器左边的margin
            banner_indicator_marginTop		指示器上边的margin
            banner_indicator_marginRight		指示器右边的margin
            banner_indicator_marginBottom		指示器下边的margin
            banner_indicator_height		指示器高度（对CircleIndicator无效）
            banner_indicator_radius		指示器圆角（对CircleIndicator无效）
            -->
            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="5dp"
                app:banner_loop_time="3500"
                app:banner_radius="10dp"
                app:banner_indicator_normal_width="20dp"
                app:banner_indicator_selected_width="20dp"
                app:banner_indicator_height="3dp"
                app:banner_indicator_normal_color="@color/colorNormalIndicator"
                app:banner_indicator_selected_color="@color/colorSelectIndicator"
                app:banner_indicator_radius="0dp"
                app:banner_indicator_space="10dp"
                app:banner_indicator_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/iv_hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_hot" />
                <TextView
                    android:id="@+id/tv_news"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/banner_push_text"
                    android:textColor="@color/colorPushNews"
                    android:textSize="14sp"/>
                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_more" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/menu_all_categories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_all_categories"
                    android:drawablePadding="4dp"
                    android:text="@string/menu_all_categories"
                    android:textSize="12sp"
                    android:textColor="@color/colorMenuText" />
                <RadioButton
                    android:id="@+id/menu_bestsellers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_bestsellers"
                    android:drawablePadding="4dp"
                    android:text="@string/menu_bestsellers"
                    android:textSize="12sp"
                    android:textColor="@color/colorMenuText" />
                <RadioButton
                    android:id="@+id/menu_vip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_vip"
                    android:drawablePadding="4dp"
                    android:text="@string/menu_vip"
                    android:textSize="12sp"
                    android:textColor="@color/colorMenuText" />
                <RadioButton
                    android:id="@+id/menu_sale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_sale"
                    android:drawablePadding="5dp"
                    android:text="@string/menu_sale"
                    android:textSize="12sp"
                    android:textColor="@color/colorMenuText" />
                <RadioButton
                    android:id="@+id/menu_free"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:button="@null"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_free"
                    android:drawablePadding="4dp"
                    android:text="@string/menu_free"
                    android:textSize="12sp"
                    android:textColor="@color/colorMenuText" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="7dp"
                    android:padding="20dp"
                    android:background="@drawable/shape_function_background"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/function_left"
                        android:textStyle="bold"
                        android:textColor="@color/colorFunctionText"
                        android:textSize="17sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/function_left_detail"
                        android:textColor="@color/colorMenuText"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="7dp"
                    android:padding="20dp"
                    android:background="@drawable/shape_function_background2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/function_right"
                        android:textStyle="bold"
                        android:textColor="@color/colorFunctionText"
                        android:textSize="17sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/function_right_detail"
                        android:textColor="@color/colorMenuText"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>